--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -34,12 +34,12 @@ set(PYBIND11_INLUCDE_DIR /home/r_milk01/fast_projekte/uni/paper/15_pymor_paper/l
 include_directories(${PYBIND11_INLUCDE_DIR})
 
 # Create the binding library
-add_library(pydealii_bindings SHARED bindings.cc discretization.cc)
+add_library(pydealii_bindings SHARED bindings.cc example.cc)
 # Don't add a 'lib' prefix to the shared library
 set_target_properties(pydealii_bindings PROPERTIES PREFIX "")
 DEAL_II_SETUP_TARGET(pydealii_bindings)
 target_link_libraries(pydealii_bindings ${PYTHON_LIBRARY})
 
-add_executable(elastic_eoc elastic_eoc.cc discretization.cc)
+add_executable(elastic_eoc elastic_eoc.cc example.cc)
 DEAL_II_SETUP_TARGET(elastic_eoc)
 target_link_libraries(elastic_eoc ${PYTHON_LIBRARY})
