--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -45,6 +45,6 @@ DEAL_II_SETUP_TARGET(dealii_example)
 target_link_libraries(dealii_example ${PYTHON_LIBRARY})
 # target_link_libraries(dealii_example dealii_bindings)
 
-add_executable(elastic_eoc elastic_eoc.cc example.cc)
-DEAL_II_SETUP_TARGET(elastic_eoc)
-target_link_libraries(elastic_eoc ${PYTHON_LIBRARY})
+add_executable(eoc eoc.cc example.cc)
+DEAL_II_SETUP_TARGET(eoc)
+target_link_libraries(eoc ${PYTHON_LIBRARY})
