--- a/docker/demo/Dockerfile
+++ b/docker/demo/Dockerfile
@@ -1,26 +1,36 @@
-FROM dealii/base:gcc-mpi
+ARG PYVER=3.5
+FROM pymor/python:$PYVER
+
 MAINTAINER rene.milk@wwu.de
 
 ARG DEALII_VERSION
 
 USER root
 ENV DEBIAN_FRONTEND noninteractive
-RUN echo "deb mirror://mirrors.ubuntu.com/mirrors.txt xenial main restricted universe multiverse" > /etc/apt/sources.list && \
-    echo "deb mirror://mirrors.ubuntu.com/mirrors.txt xenial-updates main restricted universe multiverse" >> /etc/apt/sources.list && \
-    echo "deb mirror://mirrors.ubuntu.com/mirrors.txt xenial-security main restricted universe multiverse" >> /etc/apt/sources.list && \
-    echo "deb-src mirror://mirrors.ubuntu.com/mirrors.txt xenial main restricted universe multiverse" >> /etc/apt/sources.list && \
-    echo "deb-src mirror://mirrors.ubuntu.com/mirrors.txt xenial-updates main restricted universe multiverse" >> /etc/apt/sources.list && \
-    echo "deb-src mirror://mirrors.ubuntu.com/mirrors.txt xenial-security main restricted universe multiverse" >> /etc/apt/sources.list
 RUN apt-get update
 #for add-apt-repo
-RUN apt-get install -y software-properties-common python-pip
-RUN add-apt-repository -y ppa:pymor/stable
-RUN apt-get update
-#RUN apt-get build-dep -y --no-install-recommends python-pymor-demos
-RUN pip install -U pip
-RUN pip install pymor==0.4.1
+RUN apt-get install -y software-properties-common \
+    gfortran cmake \
+    git \
+    gsl-bin \
+    libblas-dev \
+    libbz2-dev \
+    libgsl-dev \
+    liblapack-dev \
+    libnetcdf-c++4-dev \
+    libnetcdf-cxx-legacy-dev \
+    libnetcdf-dev \
+    ninja-build \
+    numdiff \
+    unzip \
+    wget \
+    zlib1g-dev \
+    libopenmpi-dev \
+    openmpi-bin
 
-RUN git clone https://github.com/dealii/dealii.git dealii-${DEALII_VERSION}-src && \
+RUN pip install -U pip
+
+RUN cd /tmp && git clone https://github.com/dealii/dealii.git dealii-${DEALII_VERSION}-src && \
     cd dealii-${DEALII_VERSION}-src && \
     git checkout v${DEALII_VERSION} && \
     mkdir build && cd build && \
@@ -30,8 +40,13 @@ RUN git clone https://github.com/dealii/dealii.git dealii-${DEALII_VERSION}-src 
           -DCMAKE_BUILD_TYPE=Release \
           -GNinja \
           ../ && \
-    ninja && ninja install
+    ninja && ninja install && \
+    cd / && rm -rf /tmp/deal*
 
-USER ${USER}
 # THE END
 ENV DEBIAN_FRONTEND teletype
+
+RUN apt-get install -y gosu
+
+ADD entrypoint.sh /usr/local/bin/
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
