--- a/docker/demo/Dockerfile
+++ b/docker/demo/Dockerfile
@@ -26,9 +26,9 @@ RUN apt-get install -y software-properties-common \
     wget \
     zlib1g-dev \
     libopenmpi-dev \
-    openmpi-bin
-
-RUN pip install -U pip
+    openmpi-bin gosu && \
+    pip install numpy && \
+    pip install git+https://github.com/pymor/pymor#egg=pymor
 
 RUN cd /tmp && git clone https://github.com/dealii/dealii.git dealii-${DEALII_VERSION}-src && \
     cd dealii-${DEALII_VERSION}-src && \
@@ -45,8 +45,6 @@ RUN cd /tmp && git clone https://github.com/dealii/dealii.git dealii-${DEALII_VE
 
 # THE END
 ENV DEBIAN_FRONTEND teletype
-
-RUN apt-get install -y gosu && pip install git+https://github.com/pymor/pymor#egg=pymor
 
 ADD entrypoint.sh /usr/local/bin/
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
