[ci] fix travis docker image name + expand build matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: generic
 services: docker
 
 before_script:
-    - export IMAGE="pymor/dealii-testing_pymor_0.4:dealii_${DEAL}"
+    - export IMAGE="pymor/dealii:v${DEAL}_py${PY}"
     - docker pull ${IMAGE}
     - export ENV_FILE=${HOME}/env
     - python3 ./.ci/make_env_file.py
@@ -20,5 +20,9 @@ notifications:
     on_start: never
 matrix:
   include:
-    - env: DEAL=8.5.1
-    - env: DEAL=9.0.0
+    - env: DEAL=8.5.1 PY=3.5
+    - env: DEAL=8.5.1 PY=3.6
+    - env: DEAL=8.5.1 PY=3.7
+    - env: DEAL=9.0.0 PY=3.5
+    - env: DEAL=9.0.0 PY=3.6
+    - env: DEAL=9.0.0 PY=3.7
