--- a/.binder/Dockerfile.in
+++ b/.binder/Dockerfile.in
@@ -27,7 +27,9 @@ ARG PYMOR_JUPYTER_TOKEN
 
 USER root
 RUN useradd -d /home/pymor --shell /bin/bash -u ${NB_UID} -o -c "" -m ${NB_USER} && \
-    chown -R ${NB_USER} /home/pymor /src/
+    chown -R ${NB_USER} /home/pymor /src/ && \
+    apt update && \
+    apt install -y libtbb-dev
 
 RUN bash -c "([[ -e /src/setup.py ]] && pip install /src || echo 'no install needed') && pip install jupyter"
 USER ${NB_USER}
