update autosquash action, remove no longer needed auto-merge

--- a/.github/workflows/autosquash_check.yml
+++ b/.github/workflows/autosquash_check.yml
@@ -10,6 +10,6 @@ jobs:
 
     steps:
       - name: Block Autosquash Commits
-        uses: xt0rted/block-autosquash-commits-action@master
+        uses: xt0rted/block-autosquash-commits-action@v2
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
