[cmake] bump minimal cxx standard, fix build type caching

--- a/.ci/azure-pipelines.yml
+++ b/.ci/azure-pipelines.yml
@@ -13,4 +13,5 @@ strategy:
 container: $[ variables['containerImage'] ]
 
 steps:
-- script: ./.ci/travis.script.bash
+- script: ./.ci/pytest.bash
+- script: ./.ci/wheel.bash
