--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,4 +16,8 @@ repos:
     rev: 3.9.2
     hooks:
     -   id: flake8
-
+-   repo: https://github.com/pre-commit/mirrors-clang-format
+    rev: 'v13.0.0'
+    hooks:
+    -   id: clang-format
+        exclude: "^lib/pybind11"
