--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,7 @@ repos:
     rev: 3.9.2
     hooks:
     -   id: flake8
+        exclude: "^(versioneer.py|src/pymor_dealii/version.py)"
 -   repo: https://github.com/pre-commit/mirrors-clang-format
     rev: 'v13.0.0'
     hooks:
