[ci] also try to install directly

--- a/.binder/Dockerfile.in
+++ b/.binder/Dockerfile.in
@@ -26,13 +26,11 @@ ARG NB_UID
 ARG PYMOR_JUPYTER_TOKEN
 
 USER root
-RUN useradd -d /home/pymor --shell /bin/bash -u ${NB_UID} -o -c "" -m ${NB_USER} && \
-    chown -R ${NB_USER} /home/pymor /src/ && \
-    apt update && \
-    apt install -y libtbb-dev
+# RUN useradd -d /home/pymor --shell /bin/bash -u ${NB_UID} -o -c "" -m ${NB_USER} && \
+#     chown -R ${NB_USER} /home/pymor /src/ 
 
-RUN bash -c "([[ -e /src/setup.py ]] && pip install /src || echo 'no install needed') && pip install jupyter"
-USER ${NB_USER}
+# # RUN bash -c "([[ -e /src/setup.py ]] && pip install /src || echo 'no install needed') && pip install jupyter"
+# USER ${NB_USER}
 
 ENV JUPYTER_TOKEN=${PYMOR_JUPYTER_TOKEN} \
     USER=${NB_USER} \
