[ci] fiswitch to fixed link checker

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,9 +14,9 @@ jobs:
   source:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: markdown-link-check
-      uses: gaurav-nelson/github-action-markdown-link-check@1.0.13
+      uses: renefritze/github-action-markdown-link-check@master
       with:
         use-verbose-mode: 'yes'
         check-modified-files-only: 'yes'
