--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,21 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.3.0
+  - repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v5.0.0
     hooks:
-    -   id: trailing-whitespace
-    -   id: check-yaml
-    -   id: check-added-large-files
-    -   id: debug-statements
--   repo: https://github.com/psf/black
-    rev: 22.6.0
+      - id: trailing-whitespace
+      - id: check-yaml
+      - id: check-added-large-files
+      - id: debug-statements
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.8.6
     hooks:
-    -   id: black
--   repo: https://github.com/pycqa/flake8
-    rev: 4.0.1
-    hooks:
-    -   id: flake8
-        exclude: "^(versioneer.py|src/pymor_dealii/version.py)"
--   repo: https://github.com/pre-commit/mirrors-clang-format
-    rev: 'v14.0.6'
-    hooks:
-    -   id: clang-format
-        exclude: "^lib/pybind11"
+      - id: ruff
+        args:
+          - --fix
+  -   repo: https://github.com/pre-commit/mirrors-clang-format
+      rev: 'v14.0.6'
+      hooks:
+      -   id: clang-format
+          exclude: "^lib/pybind11"
